Kubernetes/K8s Deployment Types/Rolling-Deployment/rolling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-app
  namespace: rolling
spec:
  replicas: 4
  selector:
    matchLabels:
      app: rolling-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: rolling-app
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=🔵 ROLLING VERSION v2"
        ports:
        - containerPort: 5678
