Kubernetes/K8s Deployment Types/Rolling-Deployment/rolling-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rolling-service
  namespace: rolling
spec:
  selector:
    app: rolling-app
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
