Kubernetes/K8s Deployment Types/Rolling-Deployment/rolling-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rolling-ingress
  namespace: rolling
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: rolling.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rolling-service
            port:
              number: 80
